--- a/Cwatch.html
+++ b/Cwatch.html
@@ -26,6 +26,12 @@
         </menu>
     </header>
 
+    <main class="contenitore-main">
+        <div class="contenitore-titolo">
+            <h1 class="cover">Cwatch</h1>
+        </div>
+    </main>
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script>
