sistemata media query

--- a/Cwatch.html
+++ b/Cwatch.html
@@ -25,12 +25,12 @@
             </ul>
         </menu>
     </header>
-
-    <main class="contenitore-main">
-        <div class="contenitore-titolo">
-            <h1 class="cover">Cwatch</h1>
+    <div class="cover">
+        <div class="cover_copy">
+            <h1>Cwatch</h1> 
         </div>
-    </main>
+    </div>
+    
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
