--- a/Cwatch.html
+++ b/Cwatch.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cwach</title>
-    <link rel="stylesheet" href="styleCwatch.css">
+    <link rel="stylesheet" href="styleCwach.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
 </head>
 <body>
@@ -19,29 +19,12 @@
         <menu class="menu-container">
             <ul>
                 <li class="header_menu_item">Home</li>
-                <li class="header_menu_item"> <a href="menu.html">Menù</a></li>
-                <li class="header_menu_item"><a href="i servizi.html">I servizi</a></li>
-                <li class="header_menu_item"><a href="contatti.html">Contatti</a></li>
+                <li class="header_menu_item"> <a href="file/menu.html">Menù</a></li>
+                <li class="header_menu_item"><a href="file/i servizi.html">I servizi</a></li>
+                <li class="header_menu_item"><a href="file/contatti.html">Contatti</a></li>
             </ul>
         </menu>
     </header>
-<<<<<<< HEAD
-
-    <main class="contenitore-main">
-        <div class="contenitore-titolo">
-            <img src="sfondo plz.png" alt="">
-            <h1 class="cover">Cwtch</h1>
-            <h4 class="cover2">enjoy it!</h4>
-=======
-    <div class="cover">
-        <div class="cover_copy">
-            <h1>Cwatch</h1> 
->>>>>>> 5ee8d3f08abb288377143b45c0355b695a48300f
-        </div>
-    </div>
-    
-
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script>
         $(document).ready(function(){
@@ -53,6 +36,11 @@
             });
         });
     </script>
+    <div class="cover_copy">
+        <img src="immagini/sfondo plz.png" alt="">
+        <h1>Cwtch</h1>
+        <h4>enjoy it!</h4>
+    </div>
 </body>
     <footer class="footer-container">
         <ul>
