sistemati i collegamenti al file css

--- a/file/menu.html
+++ b/file/menu.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
-    <link rel="stylesheet" href="styleCwatch.css">
+    <link rel="stylesheet" href="../styleCwach.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
 </head>
 <body>
@@ -18,22 +18,13 @@
         </a>
         <menu class="menu-container">
             <ul>
-                <li class="header_menu_item"><a href="">Home</a></li>
-                <li class="header_menu_item"> <a href="">Menù</a></li>
-                <li class="header_menu_item"><a href="">I servizi</a></li>
-                <li class="header_menu_item"><a href="">Contatti</a></li>
+                <li class="header_menu_item"><a href="../Cwatch.html">Home</a></li>
+                <li class="header_menu_item"> <a href="menu.html">Menù</a></li>
+                <li class="header_menu_item"><a href="i servizi.html">I servizi</a></li>
+                <li class="header_menu_item"><a href="contatti.html">Contatti</a></li>
             </ul>
         </menu>
     </header>
-
-    <main class="contenitore-main">
-        <div class="contenitore-titolo">
-            <img class="contenitore-immagine" src="sfondo plz.png" alt="">
-            <h1 class="cover">Cwtch</h1>
-            <h4 class="cover2">enjoy it!</h4>
-        </div>
-    </main>
-
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script>
