--- a/file/i servizi.html
+++ b/file/i servizi.html
@@ -20,7 +20,7 @@
             <ul>
                 <li class="header_menu_item"><a href="../Cwatch.html">Home</a></li>
                 <li class="header_menu_item"> <a href="menu.html">Menù</a></li>
-                <li class="header_menu_item"><a href="i servizi.html">I servizi</a></li>
+                <li class="header_menu_item">I servizi</li>
                 <li class="header_menu_item"><a href="contatti.html">Contatti</a></li>
             </ul>
         </menu>
