--- a/file/menu.html
+++ b/file/menu.html
@@ -19,7 +19,7 @@
         <menu class="menu-container">
             <ul>
                 <li class="header_menu_item"><a href="../Cwatch.html">Home</a></li>
-                <li class="header_menu_item"> <a href="menu.html">Menù</a></li>
+                <li class="header_menu_item"> Menù</li>
                 <li class="header_menu_item"><a href="i servizi.html">I servizi</a></li>
                 <li class="header_menu_item"><a href="contatti.html">Contatti</a></li>
             </ul>
