--- a/Cwatch.html
+++ b/Cwatch.html
@@ -18,8 +18,8 @@
         </a>
         <menu class="menu-container">
             <ul>
-                <li class="header_menu_item"> <a href="Cwatch.html">Home</a></li>
-                <li class="header_menu_item"> <a href="file/menu.html">Menù</a></li>
+                <li class="header_menu_item"> Home </li>
+                <li class="header_menu_item"><a href="file/menu.html">Menù</a></li>
                 <li class="header_menu_item"><a href="file/i servizi.html">I servizi</a></li>
                 <li class="header_menu_item"><a href="file/contatti.html">Contatti</a></li>
             </ul>
