--- a/Cwatch.html
+++ b/Cwatch.html
@@ -37,7 +37,7 @@
         });
     </script>
     <div class="cover_copy">
-        <img src="immagini/sfondo plz.png" alt="">
+        <img src="immagini/sfondo 3.png" alt="">
         <h1>Cwtch</h1>
         <h4>enjoy it!</h4>
     </div>
