--- a/file/contatti.html
+++ b/file/contatti.html
@@ -25,6 +25,19 @@
             </ul>
         </menu>
     </header>
+    <div class="card">
+        <h2>Contatti</h2>
+        <div class="right">
+            <p>Via paradiso, 28<br>
+                20158 Milano <br>
+                tel. 02 3060451 <br>
+                <a href="https://www.google.com/intl/it/gmail/about/">Cwatch@gmail.com</a>
+            </p>
+        </div>
+        <div class="left">
+            <img src="" alt="">
+        </div>
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script>
