--- a/Cwatch.html
+++ b/Cwatch.html
@@ -42,7 +42,7 @@
         <h1>Cwtch</h1>
         <h4>enjoy it!</h4>
     </div>
-
+<div class="card">
     <div class="presentazione">
         <div class="slider">
             <div class="slides">
@@ -77,6 +77,7 @@
             </div>
         </div>
     </div>
+</div>
 
 
 </body>
