--- a/Cwatch.html
+++ b/Cwatch.html
@@ -36,11 +36,49 @@
             });
         });
     </script>
+    
     <div class="cover_copy">
         <img src="immagini/sfondo 3.png" alt="">
         <h1>Cwtch</h1>
         <h4>enjoy it!</h4>
     </div>
+
+    <div class="presentazione">
+        <div class="slider">
+            <div class="slides">
+                <input type="radio" name="radio-btn" id="radio1" >
+                <input type="radio" name="radio-btn" id="radio2" >
+                <input type="radio" name="radio-btn" id="radio3" checked="slide_first">
+                <input type="radio" name="radio-btn" id="radio4" checked="slide_first">
+                <div class="slide_first">
+                    <img src="2.jpg" alt="">
+                </div>
+                <div class="slide">
+                    <img src="1.jpg" alt="">
+                </div>
+                <div class="slide">
+                    <img src="3.jpg" alt="">
+                </div>
+                <div class="slide">
+                    <img src="4.jpg" alt="">
+                </div>    
+                <div class="navigation_auto">
+                        <div class="auto-btn1"></div>
+                        <div class="auto-btn2"></div>
+                        <div class="auto-btn3"></div>
+                        <div class="auto-btn4"></div>
+                    </div>
+            </div>
+            <div class="navigation_manual">
+                <label for="radio1" class="manual-btn"></label>
+                <label for="radio2" class="manual-btn"></label>
+                <label for="radio3" class="manual-btn"></label>
+                <label for="radio4" class="manual-btn"></label>
+            </div>
+        </div>
+    </div>
+
+
 </body>
     <footer class="footer-container">
         <ul>
