--- a/Cwatch.html
+++ b/Cwatch.html
@@ -51,13 +51,13 @@
                 <input type="radio" name="radio-btn" id="radio3" checked="slide_first">
                 <input type="radio" name="radio-btn" id="radio4" checked="slide_first">
                 <div class="slide_first">
-                    <img src="2.jpg" alt="">
+                    <img src=".jpg" alt="">
                 </div>
                 <div class="slide">
-                    <img src="1.jpg" alt="">
+                    <img src="immagini/ristorante.jpg" alt="">
                 </div>
                 <div class="slide">
-                    <img src="3.jpg" alt="">
+                    <img src="immagini/ristorante esterno.jpg" alt="">
                 </div>
                 <div class="slide">
                     <img src="4.jpg" alt="">
