sistemati i testi container

--- a/Cwatch.html
+++ b/Cwatch.html
@@ -48,8 +48,8 @@
             <div class="slides">
                 <input type="radio" name="radio-btn" id="radio1" >
                 <input type="radio" name="radio-btn" id="radio2" >
-                <input type="radio" name="radio-btn" id="radio3" checked="slide_first">
-                <input type="radio" name="radio-btn" id="radio4" checked="slide_first">
+                <input type="radio" name="radio-btn" id="radio3" >
+                <input type="radio" name="radio-btn" id="radio4" >
                 <div class="slide_first">
                     <img src=".jpg" alt="">
                 </div>
@@ -76,7 +76,12 @@
                 <label for="radio4" class="manual-btn"></label>
             </div>
         </div>
+        <div class="container">
+            <h2>Title</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere asperiores repudiandae ut eligendi, modi ea libero? Dicta nobis nemo laudantium ipsa perspiciatis! Voluptatem assumenda voluptas ea nulla blanditiis, eaque mollitia.</p>
+        </div>
     </div>
+    
 </body>
     <footer class="footer-container">
         <ul>
