--- a/Cwatch.html
+++ b/Cwatch.html
@@ -43,7 +43,8 @@
         <h4>enjoy it!</h4>
     </div>
 
-    <div class="presentazione">
+<div class="presentazione">
+    <div class="container_slide">
         <div class="slider">
             <div class="slides">
                 <input type="radio" name="radio-btn" id="radio1" >
@@ -81,7 +82,47 @@
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere asperiores repudiandae ut eligendi, modi ea libero? Dicta nobis nemo laudantium ipsa perspiciatis! Voluptatem assumenda voluptas ea nulla blanditiis, eaque mollitia.</p>
         </div>
     </div>
-    
+</div>
+<div class="presentazione1" >
+    <div class="container-s">
+        <div class="slider">
+            <div class="slides">
+                <input type="radio" name="radio-btn" id="radio1" >
+                <input type="radio" name="radio-btn" id="radio2" >
+                <input type="radio" name="radio-btn" id="radio3" >
+                <input type="radio" name="radio-btn" id="radio4" >
+                <div class="slide_first">
+                    <img src="immagini/5.jpg" alt="">
+                </div>
+                <div class="slide">
+                    <img src="immagini/6.jpg" alt="">
+                </div>
+                <div class="slide">
+                    <img src="immagini/7.jpg" alt="">
+                </div>
+                <div class="slide">
+                    <img src="8.jpg" alt="">
+                </div>    
+                <div class="navigation_auto">
+                        <div class="auto-btn1"></div>
+                        <div class="auto-btn2"></div>
+                        <div class="auto-btn3"></div>
+                        <div class="auto-btn4"></div>
+                    </div>
+            </div>
+            <div class="navigation_manual">
+                <label for="radio1" class="manual-btn"></label>
+                <label for="radio2" class="manual-btn"></label>
+                <label for="radio3" class="manual-btn"></label>
+                <label for="radio4" class="manual-btn"></label>
+            </div>
+        </div>
+        <div class="container">
+            <h2>Drink</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere asperiores repudiandae ut eligendi, modi ea libero? Dicta nobis nemo laudantium ipsa perspiciatis! Voluptatem assumenda voluptas ea nulla blanditiis, eaque mollitia.</p>
+        </div>
+    </div>
+</div>
 </body>
     <footer class="footer-container">
         <ul>
