--- a/Cwatch.html
+++ b/Cwatch.html
@@ -52,16 +52,16 @@
                 <input type="radio" name="radio-btn" id="radio3" >
                 <input type="radio" name="radio-btn" id="radio4" >
                 <div class="slide_first">
-                    <img src=".jpg" alt="">
-                </div>
-                <div class="slide">
                     <img src="immagini/ristorante.jpg" alt="">
                 </div>
                 <div class="slide">
                     <img src="immagini/ristorante esterno.jpg" alt="">
                 </div>
                 <div class="slide">
-                    <img src="4.jpg" alt="">
+                    <img src="immagini/2.jpg" alt="">
+                </div>
+                <div class="slide">
+                    <img src="immagini/salafesta.jpg" alt="">
                 </div>    
                 <div class="navigation_auto">
                         <div class="auto-btn1"></div>
