--- a/file/contatti.html
+++ b/file/contatti.html
@@ -26,13 +26,15 @@
         </menu>
     </header>
     <div class="card">
+        <div class="container">
         <h2>Contatti</h2>
             <p>Via paradiso, 28<br>
                 20158 Milano <br>
                 tel. 02 3060451 <br>
                 <a href="https://www.google.com/intl/it/gmail/about/">Cwatch@gmail.com</a>
             </p>
-            <img src="" alt="">
+        </div>
+        <img src="../immagini/10.jpg" alt="">
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
