--- a/Cwatch.html
+++ b/Cwatch.html
@@ -85,7 +85,7 @@
 </div>
 <div class="presentazione1" >
     <div class="container-s">
-        <div class="slider">
+        <div class="slider" id="sl1">
             <div class="slides">
                 <input type="radio" name="radio-btn" id="radio1" >
                 <input type="radio" name="radio-btn" id="radio2" >
