messa la transizione

--- a/Cwatch.html
+++ b/Cwatch.html
@@ -51,7 +51,7 @@
                 <input type="radio" name="radio-btn" id="radio2" >
                 <input type="radio" name="radio-btn" id="radio3" >
                 <input type="radio" name="radio-btn" id="radio4" >
-                <div class="slide_first">
+                <div class="slide first">
                     <img src="immagini/ristorante.jpg" alt="">
                 </div>
                 <div class="slide">
@@ -91,7 +91,7 @@
                 <input type="radio" name="radio-btn" id="radio2" >
                 <input type="radio" name="radio-btn" id="radio3" >
                 <input type="radio" name="radio-btn" id="radio4" >
-                <div class="slide_first">
+                <div class="slide first">
                     <img src="immagini/5.jpg" alt="">
                 </div>
                 <div class="slide">
