--- a/Cwatch.html
+++ b/Cwatch.html
@@ -87,15 +87,15 @@
     <div class="container-s">
         <div class="slider" id="sl1">
             <div class="slides">
-                <input type="radio" name="radio-btn" id="radio1" >
-                <input type="radio" name="radio-btn" id="radio2" >
-                <input type="radio" name="radio-btn" id="radio3" >
-                <input type="radio" name="radio-btn" id="radio4" >
+                <input type="radio" name="radio-btn" id="radio5" >
+                <input type="radio" name="radio-btn" id="radio6" >
+                <input type="radio" name="radio-btn" id="radio7" >
+                <input type="radio" name="radio-btn" id="radio8" >
                 <div class="slide first">
                     <img src="immagini/5.jpg" alt="">
                 </div>
                 <div class="slide">
-                    <img src="immagini/6.jpg" alt="">
+                    <img src="immagini/6.png" alt="">
                 </div>
                 <div class="slide">
                     <img src="immagini/7.jpg" alt="">
@@ -111,10 +111,10 @@
                     </div>
             </div>
             <div class="navigation_manual">
-                <label for="radio1" class="manual-btn"></label>
-                <label for="radio2" class="manual-btn"></label>
-                <label for="radio3" class="manual-btn"></label>
-                <label for="radio4" class="manual-btn"></label>
+                <label for="radio5" class="manual-btn"></label>
+                <label for="radio6" class="manual-btn"></label>
+                <label for="radio7" class="manual-btn"></label>
+                <label for="radio8" class="manual-btn"></label>
             </div>
       
         </div>
