--- a/file/contatti.html
+++ b/file/contatti.html
@@ -21,7 +21,7 @@
                 <li class="header_menu_item"><a href="../Cwatch.html">Home</a></li>
                 <li class="header_menu_item"> <a href="menu.html">Menù</a></li>
                 <li class="header_menu_item"><a href="i servizi.html">I servizi</a></li>
-                <li class="header_menu_item">Contatti</li>
+                <li class="header_menu_item"><a href="contatti.html">Contatti</a></li>
             </ul>
         </menu>
     </header>
