--- a/file/menu.html
+++ b/file/menu.html
@@ -37,7 +37,7 @@
                         <input type="radio" name="radio-btn" id="radio3" >
                         <input type="radio" name="radio-btn" id="radio4" >
                         <div class="slide first">
-                           <img src="immagini/antipasti1" alt="">
+                           <img src="../immagini/antipasti1.jpg" alt="">
                         </div>
                         <div class="slide">
                             <img src="immagini/ristorante esterno.jpg" alt="">
