--- a/Cwatch.html
+++ b/Cwatch.html
@@ -83,8 +83,8 @@
         </div>
     </div>
 </div>
-<div class="presentazione1" >
-    <div class="container-s">
+<div class="presentazione" id="ps1" >
+    <div class="container_slide" id="cs1">
         <div class="slider" id="sl1">
             <div class="slides">
                 <input type="radio" name="radio-btn" id="radio5" >
