--- a/file/contatti.html
+++ b/file/contatti.html
@@ -25,16 +25,20 @@
             </ul>
         </menu>
     </header>
-    <div class="card">
-        <div class="container">
-        <h2>Contatti</h2>
+    <div class="presentazione" id="ps1">
+        <div class="container_slide">
+            <div class="container">
+            <h2>Contatti</h2>
             <p>Via paradiso, 28<br>
                 20158 Milano <br>
                 tel. 02 3060451 <br>
-                <a href="https://www.google.com/intl/it/gmail/about/">Cwatch@gmail.com</a>
+            <a href="https://www.google.com/intl/it/gmail/about/">Cwatch@gmail.com</a>
             </p>
         </div>
-        <img src="../immagini/10.jpg" alt="">
+            <div class="slider">
+             <img src="../immagini/10.jpg" alt="">
+            </div>
+        </div>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
