--- a/Cwatch.html
+++ b/Cwatch.html
@@ -78,8 +78,8 @@
             </div>
         </div>
         <div class="container">
-            <h2>Title</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere asperiores repudiandae ut eligendi, modi ea libero? Dicta nobis nemo laudantium ipsa perspiciatis! Voluptatem assumenda voluptas ea nulla blanditiis, eaque mollitia.</p>
+            <h2>Benvenuti a Cwatch</h2>
+            <p>Benvenuti al nostro ristorante, dove la passione per il cibo e l'ospitalità si fondono per creare un'esperienza gastronomica indimenticabile. </p>
         </div>
     </div>
 </div>
