--- a/Cwatch.html
+++ b/Cwatch.html
@@ -78,8 +78,8 @@
             </div>
         </div>
         <div class="container">
-            <h2>Title</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere asperiores repudiandae ut eligendi, modi ea libero? Dicta nobis nemo laudantium ipsa perspiciatis! Voluptatem assumenda voluptas ea nulla blanditiis, eaque mollitia.</p>
+            <h2>Il ristorante</h2>
+            <p>Scelte migliori della zona, piatti gourmet, ampia scelta.</p>
         </div>
     </div>
 </div>
@@ -119,7 +119,7 @@
       
         </div>
         <div class="container">
-            <h2>Drink</h2>
+            <h2>Il club</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere asperiores repudiandae ut eligendi, modi ea libero? Dicta nobis nemo laudantium ipsa perspiciatis! Voluptatem assumenda voluptas ea nulla blanditiis, eaque mollitia.</p>
         </div>
     </div>
@@ -134,4 +134,9 @@
             <li>Contattaci: +33966677788</li>
         </ul>
     </footer>
+
+    <a href="https:://wa.me/393333333333/?text=" class="wa-link">
+        <img src="immagini/wa.png" alt="" class="img-res">
+    </a>
+    
 </html>
