--- a/file/menu.html
+++ b/file/menu.html
@@ -73,6 +73,99 @@
                 </div>
             </div>
         </div>
+
+        <div class="presentazione" id="ps1" >
+            <div class="container_slide" id="cs1">
+                <div class="slider" id="sl1">
+                    <div class="slides">
+                        <input type="radio" name="radio-btn" id="radio5" >
+                        <input type="radio" name="radio-btn" id="radio6" >
+                        <input type="radio" name="radio-btn" id="radio7" >
+                        <input type="radio" name="radio-btn" id="radio8" >
+                        <div class="slide first">
+                            <img src="../immagini/primi piatti1.jpeg" alt="">
+                        </div>
+                        <div class="slide">
+                            <img src="../immagini/La carbonara.jpeg" alt="">
+                        </div>
+                        <div class="slide">
+                            <img src="../immagini/ravuoli.jpeg" alt="">
+                        </div>
+                        <div class="slide">
+                            <img src="../immagini/risotto.jpeg" alt="">
+                        </div>    
+                        <div class="navigation_auto">
+                                <div class="auto-btn1"></div>
+                                <div class="auto-btn2"></div>
+                                <div class="auto-btn3"></div>
+                                <div class="auto-btn4"></div>
+                            </div>
+                    </div>
+                    <div class="navigation_manual">
+                        <label for="radio5" class="manual-btn"></label>
+                        <label for="radio6" class="manual-btn"></label>
+                        <label for="radio7" class="manual-btn"></label>
+                        <label for="radio8" class="manual-btn"></label>
+                    </div>
+              
+                </div>
+                <div class="container">
+                    <h2>Primi Piatti</h2>
+                    <ul>
+                        <li>Pici cacio e pepe</li>
+                        <li>La carbonara</li>
+                        <li>Ravioli asiago e funghi in salsa di aglio nero</li>
+                        <li>Risotto allo champagne e gamberi</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="presentazione">
+            <div class="container_slide">
+                <div class="slider">
+                    <div class="slides">
+                        <input type="radio" name="radio-btn" id="radio1" >
+                        <input type="radio" name="radio-btn" id="radio2" >
+                        <input type="radio" name="radio-btn" id="radio3" >
+                        <input type="radio" name="radio-btn" id="radio4" >
+                        <div class="slide first">
+                           <img src="../immagini/secondo1.jpeg" alt="">
+                        </div>
+                        <div class="slide">
+                            <img src="../immagini/secondo2.jpeg due.jpeg" alt="">
+                        </div>
+                        <div class="slide">
+                            <img src="../immagini/secondo3.jpeg" alt="">
+                        </div>
+                        <div class="slide">
+                            <img src="../immagini/secondo4.jpeg" alt="">
+                        </div>    
+                        <div class="navigation_auto">
+                                <div class="auto-btn1"></div>
+                                <div class="auto-btn2"></div>
+                                <div class="auto-btn3"></div>
+                                <div class="auto-btn4"></div>
+                            </div>
+                    </div>
+                    <div class="navigation_manual">
+                        <label for="radio1" class="manual-btn"></label>
+                        <label for="radio2" class="manual-btn"></label>
+                        <label for="radio3" class="manual-btn"></label>
+                        <label for="radio4" class="manual-btn"></label>
+                    </div>
+                </div>
+                <div class="container">
+                    <h2>Secondi</h2>
+                    <ul>
+                        <li>Roast beef</li>
+                        <li>Tonno scottato in salsa di sesamo</li>
+                        <li>Caviale di melanzane con sgombro</li>
+                        <li>Insalata di tonno in avocado</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </main>
 
     
