--- a/file/menu.html
+++ b/file/menu.html
@@ -22,6 +22,7 @@
                 <li class="header_menu_item"><a href="menu.html">Menù</a></li>
                 <li class="header_menu_item"><a href="i servizi.html">I servizi</a></li>
                 <li class="header_menu_item"><a href="contatti.html">Contatti</a></li>
+                <li class="header_menu_item"><a href="Lista alcolici.html">Enoteca e Drink</a></li>
             </ul>
         </menu>
     </header>
@@ -133,13 +134,13 @@
                            <img src="../immagini/secondo1.jpeg" alt="">
                         </div>
                         <div class="slide">
-                            <img src="../immagini/secondo2.jpeg due.jpeg" alt="">
+                            <img src="../immagini/tonno.jpeg" alt="">
                         </div>
                         <div class="slide">
-                            <img src="../immagini/secondo3.jpeg" alt="">
+                            <img src="../immagini/sgombro.jpeg" alt="">
                         </div>
                         <div class="slide">
-                            <img src="../immagini/secondo4.jpeg" alt="">
+                            <img src="../immagini/avocado.jpeg" alt="">
                         </div>    
                         <div class="navigation_auto">
                                 <div class="auto-btn1"></div>
@@ -166,6 +167,55 @@
                 </div>
             </div>
         </div>
+
+        <div class="presentazione" id="ps1" >
+            <div class="container_slide" id="cs1">
+                <div class="slider" id="sl1">
+                    <div class="slides">
+                        <input type="radio" name="radio-btn" id="radio5" >
+                        <input type="radio" name="radio-btn" id="radio6" >
+                        <input type="radio" name="radio-btn" id="radio7" >
+                        <input type="radio" name="radio-btn" id="radio8" >
+                        <div class="slide first">
+                            <img src="../immagini/primi piatti1.jpeg" alt="">
+                        </div>
+                        <div class="slide">
+                            <img src="../immagini/La carbonara.jpeg" alt="">
+                        </div>
+                        <div class="slide">
+                            <img src="../immagini/ravuoli.jpeg" alt="">
+                        </div>
+                        <div class="slide">
+                            <img src="../immagini/risotto.jpeg" alt="">
+                        </div>    
+                        <div class="navigation_auto">
+                                <div class="auto-btn1"></div>
+                                <div class="auto-btn2"></div>
+                                <div class="auto-btn3"></div>
+                                <div class="auto-btn4"></div>
+                            </div>
+                    </div>
+                    <div class="navigation_manual">
+                        <label for="radio5" class="manual-btn"></label>
+                        <label for="radio6" class="manual-btn"></label>
+                        <label for="radio7" class="manual-btn"></label>
+                        <label for="radio8" class="manual-btn"></label>
+                    </div>
+              
+                </div>
+                <div class="container">
+                    <h2>Hamburger</h2>
+                    <ul>
+                        <li>Pici cacio e pepe</li>
+                        <li>La carbonara</li>
+                        <li>Ravioli asiago e funghi in salsa di aglio nero</li>
+                        <li>Risotto allo champagne e gamberi</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+
     </main>
 
     
