--- a/Cwatch.html
+++ b/Cwatch.html
@@ -22,6 +22,7 @@
                 <li class="header_menu_item"><a href="file/menu.html">Menù</a></li>
                 <li class="header_menu_item"><a href="file/i servizi.html">I servizi</a></li>
                 <li class="header_menu_item"><a href="file/contatti.html">Contatti</a></li>
+                <li class="header_menu_item"><a href="file/Lista alcolici.html">Enoteca e Drink</a></li>
             </ul>
         </menu>
     </header>
@@ -38,7 +39,7 @@
     </script>
     
     <div class="cover_copy">
-        <img src="immagini/sfondo 3.png" alt="">
+        <img src="immagini/sfondo.png" alt="">
         <h1>Cwtch</h1>
         <h4>enjoy it!</h4>
     </div>
