--- a/file/Lista alcolici.html
+++ b/file/Lista alcolici.html
@@ -64,7 +64,7 @@
                     </div>
                 </div>
                 <div class="container">
-                    <h2>Antipasti</h2>
+                    <h2>Enoteca Cwtch</h2>
                     <ul>
                         <li>Biscotto al nero di seppia, tartare di salmone su crema di cavolo bianco</li>
                         <li>Biscotto salato, tartare di Fassona su crema di Toma Piemontese</li>
@@ -215,51 +215,6 @@
             </div>
         </div>
 
-        <div class="presentazione">
-            <div class="container_slide">
-                <div class="slider">
-                    <div class="slides">
-                        <input type="radio" name="radio-btn" id="radio1" >
-                        <input type="radio" name="radio-btn" id="radio2" >
-                        <input type="radio" name="radio-btn" id="radio3" >
-                        <input type="radio" name="radio-btn" id="radio4" >
-                        <div class="slide first">
-                           <img src="../immagini/secondo1.jpeg" alt="">
-                        </div>
-                        <div class="slide">
-                            <img src="../immagini/tonno.jpeg" alt="">
-                        </div>
-                        <div class="slide">
-                            <img src="../immagini/sgombro.jpeg" alt="">
-                        </div>
-                        <div class="slide">
-                            <img src="../immagini/avocado.jpeg" alt="">
-                        </div>    
-                        <div class="navigation_auto">
-                                <div class="auto-btn1"></div>
-                                <div class="auto-btn2"></div>
-                                <div class="auto-btn3"></div>
-                                <div class="auto-btn4"></div>
-                            </div>
-                    </div>
-                    <div class="navigation_manual">
-                        <label for="radio1" class="manual-btn"></label>
-                        <label for="radio2" class="manual-btn"></label>
-                        <label for="radio3" class="manual-btn"></label>
-                        <label for="radio4" class="manual-btn"></label>
-                    </div>
-                </div>
-                <div class="container">
-                    <h2>Dolci</h2>
-                    <ul>
-                        <li>Roast beef</li>
-                        <li>Tonno scottato in salsa di sesamo</li>
-                        <li>Caviale di melanzane con sgombro</li>
-                        <li>Insalata di tonno in avocado</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
 
     </main>
 
