--- a/file/contatti.html
+++ b/file/contatti.html
@@ -22,6 +22,7 @@
                 <li class="header_menu_item"> <a href="menu.html">Menù</a></li>
                 <li class="header_menu_item"><a href="i servizi.html">I servizi</a></li>
                 <li class="header_menu_item"><a href="contatti.html">Contatti</a></li>
+                <li class="header_menu_item"><a href="Lista alcolici.html">Enoteca e Drink</a></li>
             </ul>
         </menu>
     </header>
