--- a/file/Lista alcolici.html
+++ b/file/Lista alcolici.html
@@ -38,16 +38,16 @@
                         <input type="radio" name="radio-btn" id="radio3" >
                         <input type="radio" name="radio-btn" id="radio4" >
                         <div class="slide first">
-                           <img src="../immagini/tartare.jpeg" alt="">
+                           <img src="../immagini/enoteca1.jpeg" alt="">
                         </div>
                         <div class="slide">
-                            <img src="../immagini/antipasto due.jpeg" alt="">
+                            <img src="../immagini/enoteca2.jpeg" alt="">
                         </div>
                         <div class="slide">
-                            <img src="../immagini/hummus.jpeg" alt="">
+                            <img src="../immagini/enoteca3.jpeg" alt="">
                         </div>
                         <div class="slide">
-                            <img src="../immagini/crostini.png" alt="">
+                            <img src="../immagini/somelier.jpeg" alt="">
                         </div>    
                         <div class="navigation_auto">
                                 <div class="auto-btn1"></div>
@@ -65,12 +65,8 @@
                 </div>
                 <div class="container">
                     <h2>Enoteca Cwtch</h2>
-                    <ul>
-                        <li>Biscotto al nero di seppia, tartare di salmone su crema di cavolo bianco</li>
-                        <li>Biscotto salato, tartare di Fassona su crema di Toma Piemontese</li>
-                        <li>Varietà di hummus</li>
-                        <li>Selezione di crostini</li>
-                    </ul>
+                    <h5>Benvenuti nella Cwtch enoteca! Siamo appassionati di vino e abbiamo curato una selezione di bottiglie pregiati provenienti da tutto il mondo per soddisfare i gusti dei nostri clienti più esigenti.</h5>
+                    <h5>Abbiamo scelto con cura ogni vino in modo da offrire una vasta gamma di gusti e aromi, dai bianchi leggeri ai rossi corposi, passando per i vini frizzanti e dolci. Ogni bottiglia è stata selezionata per la sua qualità e provenienza, e il nostro personale esperto è a disposizione per aiutarvi a trovare il vino perfetto per ogni occasione.</h5>
                 </div>
             </div>
         </div>
@@ -111,7 +107,7 @@
               
                 </div>
                 <div class="container">
-                    <h2>Primi Piatti</h2>
+                    <h2>Vini bianchi</h2>
                     <ul>
                         <li>Pici cacio e pepe</li>
                         <li>La carbonara</li>
@@ -157,7 +153,7 @@
                     </div>
                 </div>
                 <div class="container">
-                    <h2>Secondi</h2>
+                    <h2>Vini rossi</h2>
                     <ul>
                         <li>Roast beef</li>
                         <li>Tonno scottato in salsa di sesamo</li>
@@ -204,13 +200,11 @@
               
                 </div>
                 <div class="container">
-                    <h2>Hamburger</h2>
-                    <ul>
-                        <li>Pici cacio e pepe</li>
-                        <li>La carbonara</li>
-                        <li>Ravioli asiago e funghi in salsa di aglio nero</li>
-                        <li>Risotto allo champagne e gamberi</li>
-                    </ul>
+                    <h2>Cocktail</h2>
+                    <h5>Siamo molto orgogliosi di offrire ai nostri clienti una vasta selezione di drink alcolici ed analcolici preparati dai nostri barman professionisti.</h5>
+                    <h5>La nostra carta dei drink è stata accuratamente studiata per offrire una varietà di opzioni per tutti i gusti, dai classici ai più moderni, senza mai perdere di vista la qualità degli ingredienti. I nostri barman sono altamente qualificati e possono creare cocktail personalizzati in base ai vostri gusti, utilizzando ingredienti freschi e di alta qualità.</h5>
+                    <h5>Inoltre, offriamo anche una selezione di analcolici, come succhi di frutta freschi e bevande gassate artigianali, ideali per coloro che non bevono alcol o per chi vuole solo rinfrescarsi.</h5>
+                    <h5>Non esitate a chiedere al nostro personale esperto consigli su cosa scegliere, saranno felici di consigliarvi e faremo in modo che il vostro tempo trascorso nel nostro locale sia il più piacevole possibile.</h5>
                 </div>
             </div>
         </div>
